--- a/src/css/Default.css
+++ b/src/css/Default.css
@@ -1,10 +1,17 @@
 .introWrapper {
+  font-size: 14px;
   text-align: center;
   margin-top: 20px;
 }
 
 .introContent {
-  max-width: 180px;
-  min-width: 120px;
+  width: fit-content;
   margin: 30px auto;
+}
+
+.profile {
+  display: inline-block;
+  width: 300px;
+  height: 300px;
+  background-color: #123456;
 }
