--- a/src/css/Default.css
+++ b/src/css/Default.css
@@ -11,7 +11,7 @@
 
 .profile {
   display: inline-block;
-  width: 300px;
-  height: 300px;
-  background-color: #123456;
+  width: 200px;
+  height: 200px;
+  margin-top: 20px;
 }
